[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Demo/Demo.gd" type="Script" id=1]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 356.0
margin_top = 285.0
margin_right = 667.0
margin_bottom = 315.0
custom_constants/separation = 22

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 93.0
margin_bottom = 30.0
custom_constants/separation = 10
alignment = 1

[node name="Btn_Play_sound_1" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 5.0
margin_right = 93.0
margin_bottom = 25.0
text = "Play sound 1"

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 311.0
margin_bottom = 30.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer3"]
margin_right = 196.0
margin_bottom = 14.0
text = "Howler Global Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer3"]
margin_top = 14.0
margin_right = 196.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="Slider_Howler_Global_Volume" type="HSlider" parent="CenterContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 8.0
margin_right = 188.0
margin_bottom = 16.0
rect_min_size = Vector2( 180, 0 )
max_value = 1.0
step = 0.01
value = 0.5
tick_count = 11
ticks_on_borders = true

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 188.0
margin_top = 1.0
margin_right = 196.0
margin_bottom = 15.0
text = "1"

[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Btn_Play_sound_1" to="." method="_on_Btn_Play_sound_1_pressed"]
[connection signal="drag_ended" from="CenterContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Slider_Howler_Global_Volume" to="." method="_on_Slider_Howler_Global_Volume_drag_ended"]
